[project]
name = "async-substrate-interface"
version = "1.0.0"
description = "Asyncio library for interacting with substrate. Mostly API-compatible with py-substrate-interface"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE.txt" }
keywords = ["substrate", "development", "bittensor"]
authors = [
  { name = "Opentensor Foundation" },
  { name = "BD Himes", email = "benhimes@opentensor.dev" }
]

maintainers = [
  { name = "Opentensor Foundation", email = "benhimes@opentensor.dev" },
  { name = "BD Himes", email = "benhimes@opentensor.dev" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
#  "Programming Language :: Python :: 3.13",  TODO not yet supported
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "wheel",
  "asyncstdlib~=3.13.0",
  "bittensor-wallet>=2.1.3",
  "bt-decode==0.4.0",
  "scalecodec==1.2.11",
  "websockets>=14.1",
  "xxhash"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/opentensor/async-substrate-interface/"
"Bug Reports" = "https://github.com/opentensor/async-substrate-interface/issues"
"Source" = "https://github.com/opentensor/async-substrate-interface/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
