[project]
name = "async-substrate-interface"
version = "1.6.4"
description = "Asyncio library for interacting with substrate. Mostly API-compatible with py-substrate-interface"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["substrate", "development", "bittensor"]

dependencies = [
  "wheel",
  "aiosqlite>=0.21.0,<1.0.0",
  "cyscale==0.1.6",
  "websockets>=14.1",
  "xxhash",
  "ruff==0.11.5",
]

requires-python = ">=3.10,<3.15"

authors = [
  { name = "Opentensor Foundation" },
  { name = "BD Himes", email = "b@latent.to" }
]

maintainers = [
  { name = "Latent Holdings" },
  { name = "BD Himes", email = "b@latent.to" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/opentensor/async-substrate-interface/"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
async_substrate_interface = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"


[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "bittensor",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-mock==3.14.0",
    "pytest-split==0.10.0",
    "pytest-xdist==3.6.1",
    "pytest-rerunfailures==10.2",
    "bittensor-wallet>=4.0.0",
    "pytest-forked"
]
