[metadata]
name = async-substrate-interface
version = 1.0.0
description = Asyncio library for interacting with substrate. Mostly API-compatible with py-substrate-interface
author = Opentensor Foundation
author_email = benhimes@opentensor.dev
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
